# SmartRail

./: .gitignore  .graphify_python  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
.obsidian/: graph.json  workspace.json
alembic/versions/: 0001_initial.py
core/graph/: section_graph.py
core/models/: __init__.py  schedule.py  section.py  train.py
frontend/: index.html  package-lock.json  package.json
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
infra/: docker-compose.yml
infra/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.optimization
optimization/: __init__.py  conflict_detector.py
optimization/solvers/: greedy_heuristic.py  milp_solver.py
raw/: SmartRail_Roadmap.txt
services/api/: main.py
services/event_processor/: kafka_consumer.py  main.py  orchestrator.py
services/train_tracker/: main.py  state.py
simulator/: data_generator.py  engine.py  scenario_manager.py  train_process.py
tests/benchmarks/: test_performance.py
tests/integration/: test_event_pipeline.py
tests/unit/: test_simulator.py  test_solvers.py
